# capital-manager

./: CHANGELOG.md  README.md  pyproject.toml
src/capital_manager/api/: main.py
src/capital_manager/api/routers/accounts/: __init__.py
src/capital_manager/api/routers/transactions/: __init__.py
src/capital_manager/cli/: db_utils.py  main.py  utils.py
src/capital_manager/cli/account/: __init__.py
src/capital_manager/cli/transaction/: __init__.py
src/capital_manager/core/: db_utils.py  services.py
src/capital_manager/core/db/: models.py  session.py
src/capital_manager/core/models/: account.py  transaction.py
src/capital_manager/core/services/: __init__.py
src/capital_manager/core/services/accounts/: __init__.py
src/capital_manager/core/services/financial/: __init__.py
src/capital_manager/core/services/transactions/: __init__.py
tests/: conftest.py  session.py  utils.py
tests/api/: conftest.py  test_accounts.py  test_ping.py  test_transactions.py
tests/core/services/: test_accounts.py  test_financial.py  test_transactions.py
